# LangChain-Guide-and-Projects

./: readme.md
LangChain-Guide/09_vecor_store/: 02_qdrant_vecor_store.py
LangChain-Projects/chat-with-pdf/: pyproject.toml
LangChain-Projects/chat-with-pdf/src/chat_with_pdf/: __init__.py  main.py
LangChain-Projects/conversation-chatbot-or/: .gitignore  requirements.txt
LangChain-Projects/conversation-chatbot-or/src/conversation_chatbot_or/: __init__.py  app.py  chatbot.py
LangChain-Projects/f1-chatbot/: .gitignore  pyproject.toml
LangChain-Projects/f1-chatbot/src/f1_chatbot/: __init__.py  chatbot.py  data_processing.py  retrievel.py
LangChain-Projects/f1-chatbot/test/: Formula1_GPT.ipynb
LangChain-Projects/rag_chatbot/: pyproject.toml
LangChain-Projects/rag_chatbot/src/rag_chatbot/: __init__.py  chain.py  data-processing.py
LangChain-Projects/rag_chatbot/test/: LangChain_Chat_with_Your_Data.ipynb
